@@ -1,3 +1,5 @@
+Revision history for Elasticsearch-Compat
+
 0.01    2013-10-02
         First release
 
